[package]
name = "test-fuzz-internal"
version = "2.0.4"
edition = "2018"

description = "test-fuzz-internal"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/disconnect3d/test-fuzz"

[dependencies]
cargo_metadata = "0.14.1"
proc-macro2 = "1.0.28"
quote = "1.0.2"
serde = "1.0.116"
strum_macros = "0.24.0"

[features]
__auto_concretize = []
__serde_bincode = []
__serde_cbor = []
__serde_cbor4ii = []
