[package]
name = "test-fuzz-macro"
version = "2.0.5"
edition = "2018"

description = "test-fuzz-macro"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/disconnect3d/test-fuzz"

[lib]
proc-macro = true

[dependencies]
darling = "0.12.0"
if_chain = "1.0.2"
lazy_static = "1.4"
proc-macro2 = "1.0.28"
quote = "1.0.2"
subprocess = "0.2.8"
syn = { version = "1.0.5", features = ["full", "parsing", "visit", "visit-mut"] }
toolchain_find = "0.2.0"
unzip-n = "0.1.2"

test-fuzz-internal = { path = "../internal", package = "test-fuzz-internal", version = "=2.0.5" }

[features]
__auto_concretize = []
__persistent = []
__serde_bincode = ["test-fuzz-internal/__serde_bincode"]
__serde_cbor = ["test-fuzz-internal/__serde_cbor"]
__serde_cbor4ii = ["test-fuzz-internal/__serde_cbor4ii"]
