[package]
name = "test-fuzz"
version = "2.0.5"
edition = "2018"

description = "To make fuzzing Rust easy"

authors = ["Samuel E. Moelius III <sam@moeli.us>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/disconnect3d/test-fuzz"

[dependencies]
afl = "0.12.2"
serde = "1.0.116"

internal = { path = "../internal", package = "test-fuzz-internal", version = "=2.0.5" }
runtime = { path = "../runtime", package = "test-fuzz-runtime", version = "=2.0.5" }
test-fuzz-macro = { path = "../macro", version = "=2.0.5" }

# smoelius: A list of formats we might support can be found here:
# https://github.com/djkoloski/rust_serialization_benchmark

[features]
auto_concretize = ["internal/__auto_concretize", "test-fuzz-macro/__auto_concretize"]
serde_bincode = ["internal/__serde_bincode", "runtime/__serde_bincode", "test-fuzz-macro/__serde_bincode"]
serde_cbor = ["internal/__serde_cbor", "runtime/__serde_cbor", "test-fuzz-macro/__serde_cbor"]
serde_cbor4ii = ["internal/__serde_cbor4ii", "runtime/__serde_cbor4ii", "test-fuzz-macro/__serde_cbor4ii"]
__persistent = ["test-fuzz-macro/__persistent"]

[package.metadata.cargo-udeps.ignore]
normal = ["afl"]
